# DigitML

./: CMakeLists.txt  README.md
.cache/clangd/index/: NN.cpp.A5491C845E091E0B.idx  NN.hpp.216A129143DF6833.idx  dataset.cpp.282FF39BC380195F.idx  dataset.hpp.7BACAFF422F4DABC.idx  main.cpp.8DE578A74F75A0FC.idx  matrix.hpp.8BE8B216C0B077C3.idx  matrix.tpp.CA99737622C00AE7.idx
.github/workflows/: c-cpp.yml
include/datastructures/: matrix.hpp  matrix.tpp
include/neuralnetwork/: NN.hpp  dataset.hpp
src/: NN.cpp  dataset.cpp  main.cpp
tests/: NNtest.cpp
